--- a/lineman/app/components/group_page/group_page.scss
+++ b/lineman/app/components/group_page/group_page.scss
@@ -16,6 +16,7 @@
   height: 320px;
   background: url('http://placehold.it/640x160') no-repeat center center #f5f5f5;
   background-size: cover;
+  z-index: 0;
 }
 
 .group-page__description {
@@ -32,6 +33,14 @@
   @include fontSmall;
 }
 
+.group-page__header--compact {
+  margin: 215px 0 15px;
+}
+
+.group-page__header--compact img {
+  @include smallIcon;
+}
+
 .group-page__logo{
   position: relative;
   top: 215px;
@@ -39,6 +48,10 @@
   height: 108px;
   background: url('http://placehold.it/100x100') no-repeat top center white;
   border: 4px solid #fff;
+}
+
+.group-page__logo--compact {
+  display: table-cell;
 }
 
 .group-page__name-and-actions{
@@ -53,6 +66,19 @@
   max-width: 50%;
   margin-left: 108px + 15px;
   a{color: $primary-text-color;}
+}
+
+.group-page__name--compact {
+  display: table-cell;
+  vertical-align: middle;
+  background: rgba(0,0,0,.5);
+  color: white;
+  padding: 0 10px;
+}
+
+.group-page__name--compact a {
+  color: white;
+  font-weight: bold;
 }
 
 .group-page__privacy{
